[PI-819] [old UI] The page orientation can no longer be changed after printing to PDF on Windows
Categories
(Toolkit :: Printing, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | verified |
| firefox83 | --- | verified |
People
(Reporter: ppop, Assigned: bobowen)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [print2020_v82][old-ui+])
Attachments
(2 files)
|
1.51 MB,
image/gif
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
[Affected versions]:
- Firefox Beta 82.0b5, Build ID 20200929175845
[Affected platforms]:
- Windows 10 x64
[Prerequisites]:
- Have the "print.tab_modal.enabled" pref set as "false".
[Steps to reproduce]:
- Open the browser with the profile from prerequisites and navigate to any webpage.
- Click the hamburger menu button and click the "Print..." option.
- Make sure "Portrait" mode is selected and click the "Print..." button.
- Select the "Microsoft Print to PDF" and click the "Print" button.
- After the document is saved, click the "Landscape" button and observe the behavior.
[Expected result]:
- The orientation of the page is changed to Landscape.
[Actual result]:
- The page remains in the Portrait orientation.
[Regression]:
- I have managed to find a regression window, using the Mozregression tool. Here are the results:
Last good revision: 24648c48a49cc229f8839d19c22fb2626f767c82
First bad revision: b32cb06ef2aeaa939af0484498fcbfd74db05790
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=24648c48a49cc229f8839d19c22fb2626f767c82&tochange=b32cb06ef2aeaa939af0484498fcbfd74db05790 - From the pushlog, it seems that bug 1663940 might have caused this issue.
[Notes]:
- This issue is not reproducible using the new UI.
- The issues persists after the browser is restarted.
- This issue is not reproducible on macOS and linux.
- Attached a screen recording of the issue:
Comment 1•5 years ago
|
||
Bob, can you take a look?
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Depends on D92099
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
Comment on attachment 9179083 [details]
Bug 1668516: Account for orientation when getting paper size from device context in CopyFromNative. r=jwatt!
Beta/Release Uplift Approval Request
- User impact if declined: Previewing and printing to landscape will be broken for Windows users in the old UI.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: See description
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Fairly simple patch which allows for whether the DEVMODE and device context being used have their orientation set to landscape.
- String changes made/needed: None
| Assignee | ||
Updated•5 years ago
|
Comment 5•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Comment on attachment 9179083 [details]
Bug 1668516: Account for orientation when getting paper size from device context in CopyFromNative. r=jwatt!
approved for 82.0b7
Comment 7•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
| Reporter | ||
Comment 8•5 years ago
|
||
I've verified that this issue is no longer reproducible on Beta 82.0b7, Build ID 20201002191150 and Nightly 83.0a1, Build ID 20201004212809 using Windows 10 x64. However the "Landscape" page orientation can't be selected before printing at least once. This behavior is tracked in Bug 1669187.
Updated•5 years ago
|
Comment 9•5 years ago
|
||
Updated•5 years ago
|
Description
•