Bug 1668516: Account for orientation when getting paper size from device context in CopyFromNative. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D92121